Thu Jul 11 13:33:41 2002  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c, config/locale.alias:  Added Macedonian
	  fixes #84290, added Malay to the language alias list,
	  added some more untranslated names, added Vietnamese

Thu Jul 11 13:31:01 2002  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_action_language.c:  Fix saving of languages,
	  Add Last and System default language choices.  When setting system
	  default just return "" as that's what the daemon expects

	* gui/gdmlogin.c: add the System default language choice, and
	  for system default just return "" as above

	* gui/gdmlogin.c, gui/greeter/greeter_action_language.c: Ask before
	  saving a new language if nothing was saved before and we were
	  using the system default

	* daemon/slave.c: when we get the system default language wipe the
	  user lang setting

Thu Jul 11 10:54:28 2002  George Lebl <jirka@5z.com>

	* gui/greeter/greeter.c, gui/greeter/greeter_configuration.h,
	  gui/greeter/greeter_item.c:  Apply a patch from
	  Terje Rosten <terjeros@phys.ntnu.no> to also obey the 24 hour
	  clock setting in the graphical greeter.  This makes the setup
	  proggie a little inconsistent as the setting is in the standard
	  greeter tab, so we'll have to figure that one out as well.

Thu Jul 11 10:39:18 2002  George Lebl <jirka@5z.com>

	* daemon/gdm-net.c, daemon/xdmcp.c: some indenting foo

	* gui/gdmlogin.c, gui/gdmchooser.c, gui/greeter/greeter.c:  Set
	  the IO channels to be unbuffered just like in the daemon and
	  set their encoding to NULL.  We want to be as raw as possible

	* gui/gdmlogin.c, gui/greeter/greeter_item_pam.c: initially leave
	  the prompt entry insensitive.  Also initially set the entry to
	  "..." in the greeter since otherwise it will be a little
	  unresponsive to the first keystroke.  Fixes #83187

Thu Jul 11 09:41:55 2002  George Lebl <jirka@5z.com>

	* daemon/gdm-net.c, daemon/xdmcp.c: Apply patch from
	  Kesor <kesor@mail.ru> to set the io channel encoding to NULL