@@ -1,3 +1,7 @@
+Thu Jul 11 15:15:42 2002  George Lebl <jirka@5z.com>
+
+	* gui/gdmflexiserver.c: corrected yodaspeak and thus #83077
+
 Thu Jul 11 13:33:41 2002  George Lebl <jirka@5z.com>
 
 	* gui/gdmlanguages.c, config/locale.alias:  Added Macedonian
